--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-Gear</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="styles/influencer.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles/influencer.init.css">
 </head>
 <body>
     <main>
-        <section class="flex gap-[504px] mt-5">
+        <section class="flex gap-[504px] mt-5 max-w-[1200px]">
             <div><h4 class=" text-2xl font-bold  ml-20">Influencer products</h4></div>
             <div class="flex gap-[25px] font-medium mr-18">
                 <p class="mr-3">Home</p>
@@ -28,8 +26,8 @@
                 <h2 class=" text-[52px] font-bold">Start your Journey as Influencer</h2>
                 <p class="font-medium text-[16px] decoration-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <div class="flex bg-[#E02C6D] w-48 h-11 rounded-[41px] hover:bg-cyan-200">
-                    <button class="font-bold ml-6 text-[16px] decoration-white">Preebook now</button>
-                    <img class=" h-[14px] w-4 mt-4" src="icons/arrow.png" alt="">
+                    <button class="font-bold ml-6 text-[16px] decoration-white">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+                    
                 </div>
             </div>
             <div>
@@ -104,9 +102,22 @@
                 </div>
             </sub-section>
         </section>
+        <section class="flex gap-[50px] mb-[100px]">
+            <div><img class=" w-[404px] h-[270] rounded[7px] ml-24" src="images/gear.png" alt=""></div>
+            <div class="ml-[80px]">
+                <h3 class="font-bold text-4xl mt-3 mb-4">Featured products at one place</h3>
+                <p class=" mb-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="flex bg-[#E02C6D] w-[155px] h-11 rounded-[8px] hover:bg-cyan-200 p-2 pl-8">Join Now<i class="fa-solid fa-arrow-right p-1.5"></i></button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="max-w-[1270px] text-center bg-cyan-300">
+            <h2 class="font-bold text-2xl">Influencer products</h2>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class=" p-[4px]"><i class="fa-brands fa-instagram mr-4"></i><i class="fa-solid fa-globe mr-4"></i><i class="fa-brands fa-twitter mr-4"></i><i class="fa-brands fa-youtube"></i></div>
+        </div>
     </footer>
 </body>
 </html>
